# serverless-sample

./: .coverage  .gitignore  Dockerfile.allure  Dockerfile.behave  Dockerfile.check  Dockerfile.local  README.md  Taskfile.yml  behave.ini  docker-compose.allure.yml  docker-compose.behave.yml  docker-compose.dev.yml  pyproject.toml
api/: main.py  models.py
features/: product.feature
features/steps/: product_steps.py
scripts/: init-dynamodb.sh
tests/: test_main.py
